fix: code block style in light / dark mode
closed #23

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,3 +46,9 @@ a, a:link, a:visited, a:active {
 ::-webkit-resizer {
   display: none;
 }
+
+.dark pre {
+  background-color: #d8d8d8;
+  border-color: #ddd;
+  filter: invert(90%) hue-rotate(180deg);
+}
